# iora_sdp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: iora_sdpConfig.cmake.in
docs/: architecture.json  programmers_manual.md
include/iora/sdp/: attributes.hpp  offer_answer.hpp  sdp_parser.hpp  sdp_serializer.hpp  session_description.hpp  types.hpp
tests/: CMakeLists.txt  fuzz_parser.cpp  fuzz_parser.dict  test_attributes.cpp  test_offer_answer.cpp  test_parser.cpp  test_round_trip.cpp  test_serializer.cpp  test_session_description.cpp  test_types.cpp  test_webrtc_sdp.cpp
tests/fuzz_corpus/: bare_lf.sdp  binary_prefix.sdp  datachannel.sdp  longline.sdp  maximal.sdp  minimal.sdp  mixed_endings.sdp  no_media.sdp  null_bytes.sdp  sip.sdp  truncated.sdp  unknown_attrs.sdp  webrtc.sdp
